feat(ui): add base layout for JournalEntry view with table and buttons
- Created JournalEntryView.fxml with TableView and placeholder buttons
- Added JournalEntryController with empty action methods
- Connected FXML to TraderJournalGui launcher

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,18 @@
             <version>4.0.2</version>
         </dependency>
 
+        <!-- JavaFX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>17.0.2</version>
+        </dependency>
+
         <!-- Testing -->
 
         <dependency>
